[package]
name = "stripboard"
version = "1.0.0"
description = "Stripboard — Calendarizador para producciones audiovisuales"
authors = ["Felipe"]
edition = "2021"

[lib]
name = "stripboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
